styles.css
/* http://meyerweb.com/eric/tools/css/reset/
v2.0 | 20110126
License: none (public domain)
*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
    display: block;
}
body {
    line-height: 1;
}
ol, ul {
    list-style: none;
}
blockquote, q {
    quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
    content: none;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
}

/* === VARIABLES === */
:root{
    --font-primary: "LINE Seed JP", sans-serif; 
    --font-secondary: "Pangolin", sans-serif;
    
    --text-color: #2d2d2d;
    /* 050505 */
    

    /* TESTING COLOR PALLETTE */
    --off-white: #F8F0E3;
    --toggle-color:#569f52;
    --main-color: #8DBB8B;
    --yellow: #feca3cd5;
    --breakRed: #BF616A;
}

/* === BASE === */
body{
    background-color: var(--main-color);
    font-family: var(--font-primary);
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    transition: background-color 0.8s ease, color 0.5s ease;
}

body.breakMode{
    background-color: var(--breakRed);
}

h1, h2, p{
    font-family: var(--font-primary);
}

/* === HEADER === */
header{
    display: flex;
    justify-content: space-between;
    background-color: var(--header-color);
}

header a{
    text-decoration: none;
    color: var(--text-color);
}

header, main, footer{
    padding: 1rem;
}

h1{
    font-size: 1rem;
}

nav ul{
    display: flex;
    gap: 1rem;
}

/* === MAIN === */
main{
    position: relative;
    display: flex;
    flex-direction: column;
    text-align: center;
    flex: 1;
    justify-content: center;
    align-items: center;
}

#tagline{
    opacity: 75%;
    padding: 10px;
    font-size: 15px;
    
}

.timerDisplay{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

#mode{
    font-size: 5rem;
    font-weight: bold;
    color: var(--text-color);
    transition: font-size 1s cubic-bezier(1, 0, 0, 1.01), font-weight 2s ease;
}

/* START BUTTON TRANSITION */

#mode.shrink{
    font-size: 3rem;
    font-weight: 200;
    opacity: 78%;
}
/* button reset */
#sticky, #startBtn, #timerBtns button, .closeBtn, textarea, #skipBtn{
    background: none;
    border: none;
    border-radius: 10px;
}

#sticky img, #startBtn img, #timerBtns img, .closeBtn{
    cursor: pointer;
}

#startBtn img{
    width: auto;
    height: 150px;
}

#sessionCounter{
    font-size: 1rem;
    line-height: 25px;
    color: var(--text-color);
    margin-top: 10px;
    opacity: 78%;
}


/* === TIMER  === */
#timer{
    font-size: 7rem;
    font-weight: 800;
    color: var(--text-color);
    padding: 20px 10px;
    transition: cubic-bezier(0.075, 0.82, 0.165, 1);
}

#timerBtns button{
    padding: 1rem;
}

/* === STICKY NOTE BUTTON === */
#sticky{
    position: absolute;
    bottom: 1rem;
    right: 1rem;
}

.stickyNote {
    display: flex;
    flex-direction: column;
    padding: 10px;
    background-color: var(--yellow);
    margin-top: 20px;
}

.stickyHeader{
    font-family: var(--font-primary);
    display: flex;
    justify-content: space-between;
    padding: 10px 5px;
    font-size: 1.2rem;
    font-weight: 300;
    text-decoration: underline;
    opacity: 80%;
}

.stickyNote[hidden]{
    display: none;
}

#sticky img:hover{
    content: url('images/stickyNoteHover.svg');
}

textarea{
    font-family: var(--font-secondary);
    padding: 10px;
    width: 230px;
    height: 175px;
    font-size: 1.2rem;
    font-weight: 100;
    opacity: 70%;
}

textarea:focus{
    outline: none;
}

textarea::placeholder{
    color: var(--text-color);
    opacity: 70%;
}

/* === FOOTER === */
footer{
    display: flex;
    justify-content: center;
    gap: 30px;
    padding: 10px;
    background-color: var(--footer-color);
}


/* === ABOUT === */

.abtImg img{
    height: 500px;
    width: auto;
    padding-top: 50px;
}

.abtContainer {
    color: var(--text-color);
    display: flex;
    flex-direction: row; 
    justify-content: center;
    text-align: left;   
    gap: 5px;
}

.abtContainer h1{
    font-family: var(--font-secondary);
    font-weight: bold;
    font-size: 4rem;
    padding: 10px 0px;
}

.abtSection h2{
    font-weight: bold;
    font-size: 2rem;
    padding: 5px 0px;
    max-width: 700px;
}

.abtSection{
    display: flex;
    flex-direction: column;
    max-width: 750px;
}

.abtSection p{
    line-height: 20px;
    margin-bottom: 30px;
}

/* === SETTINGS WINDOW === */

.settings{
    margin-top: 10px;
    display: flex;
    flex-direction: column;
    border: 2px solid var(--text-color);
    padding: 10px 40px 20px;
    border-radius: 15px;
    gap: 10px;
    background-color: var(--off-white);
    opacity: 0%;
    transform: translateY(20px);
    transition: opacity 0.3s ease, transform 0.3s ease;
    visibility: hidden;
    pointer-events: none;
    max-height: 0;
    overflow: hidden;
    border: none;
}

.settings.open{
    opacity: .75;
    transform: translateY(0);
    pointer-events: auto;
    visibility: visible;
    max-height: 600px;
    border: 2px solid var(--text-color);;
}

.settings > div{
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 10px;
}

.settingsHeader{
    display: flex;
    justify-content: center;
    padding-bottom: 5px;
    font-size: 3rem;
    font-weight: bold;
}

.settings label:first-child{
    text-align: left;
    /* width: 190px; */
    font-size: 1.3rem;
}

#closeSettingsBtn{
    position: relative;
    width: 30px;
    height: 30px;
    left: 300px;
    text-decoration: underline;
}

.settings input{
    border-radius: 10px;
    padding: 5px;
}

input#focusTime, input#breakTime, input#longBreakTime{
    font-family: var(--font-secondary);
    font-size: 1.2rem;
    width: 80px;
}

#saveSettings{
    all: unset;
    cursor: pointer;
    border: 2px solid var(--text-color);
    padding: 10px;
    border-radius: 15px;
    margin-top: 5px;
}

#saveSettings:hover{
    text-decoration: underline;
}

svg:hover{
    cursor: pointer;
}

svg[hidden] {
    display: none;
}

/* === CHECKBOX STYLE === */
.toggle {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

.toggle input {
  display: none;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #333;
  transition: 0.4s;
  border-radius: 34px;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: #FFF;
  transition: 0.4s;
  border-radius: 50%;
}

input:checked + .slider {
    /* placeholder */
  background-color: var(--toggle-color); 
}

input:checked + .slider:before {
  transform: translateX(26px);
}

/* === DARK MODE STYLE === */
.darkMode{
    --text-color: #e0e0e0;
    --main-color: #1a1a1a;
    --breakRed: #3a3a3a;
}
#timerBtns svg {
    overflow: visible;
}
body.darkMode svg circle {
    fill: #555555;
    stroke: var(--off-white);
    stroke-width: 1.5px;
}

body.darkMode footer svg path,
body.darkMode footer svg g {
    fill: #e0e0e0;
}

body.darkMode #saveSettings, body.darkMode .settings{
    border: 2px solid #1a1a1a;
}

body.darkMode textarea::placeholder{
    color: #1a1a1a;
}

.timerWrapper {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 10px;
    width: 100%;
}

#skipBtn{
    visibility: hidden;
    position: absolute;
    right: -90px;
    cursor: pointer;
    padding: 0;
    opacity: .90;
}

#skipBtn:hover{
    opacity: 1;
}

#skipBtn.showSkip{
    visibility: visible;
}

/* advanced settings */
#advancedToggle{
    font-family: var(--font-primary);
    font-weight: 900;
    display: flex;
    justify-content: flex-start;
    font-size: 20px;
    cursor: pointer;
    opacity: .90;
    
}

#advancedArrow {
    transition: transform .1s ease;
}

#advancedSettings{
    display: flex;
    flex-direction: column;
    max-height: 0;
    overflow: hidden;
    transition: max-height .3s ease, opacity .3s ease;
    opacity: 0;
}

#advancedSettings div{
    display: flex;
    align-items: center;
    gap: 10px;
}

#advancedSettings label{
    font-size: 1.1rem;
}

#advancedSettings.open{
    max-height: 300px;
    opacity: 1;
}

#advancedToggle.open #advancedArrow{
    transform: rotate(180deg);
}

#advancedSettings label.toggle{
    width: 52px;
    height: 30px;
}
#advancedSettings .slider:before {
    height: 23px;
    width: 23px;
    left: 4px;
    bottom: 4px;
}

#advancedSettings input:checked + .slider:before {
    transform: translateX(21px);
}
/* style advanced settings */

